--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "background_color": "#1f5361",
   "theme_color": "#31849B",
   "icons": [
-    { "src": "accomm1.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "logo-dark.png", "sizes": "192x192", "type": "image/png" },
     { "src": "cyber1.png",  "sizes": "512x512", "type": "image/png" },
     { "src": "splash.png", "sizes": "1080x1920", "purpose": "any" }
   ]
